fixed sizing of call to action and quote spacing

--- a/odin-landingPage/style.css
+++ b/odin-landingPage/style.css
@@ -460,26 +460,26 @@ section {
 }
 
 .blockquote-container {
-  padding: 0.5rem 25%;
+  padding: 3rem 10%;
   margin: 6rem 0;
   background-color: rgba(95, 95, 95, 0.4);
 }
 .blockquote-text {
   font-size: 36px;
-  font-weight: lighter;
+  font-weight: 300;
   font-style: italic;
   margin-bottom: 0;
   text-align: center;
 }
 .blockquote-author {
   text-align: right;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 600;
 }
 
 .call {
   padding: 0 10%;
-  margin: 15rem 0 4rem 0;
+  margin: 10rem 0 4rem 0;
 }
 
 .call-container {
@@ -489,7 +489,13 @@ section {
   justify-content: space-between;
   align-items: center;
   color: #f9faf8;
-  padding: 0 15%;
+  padding: 2rem 15%;
+}
+.call-text p {
+  margin-top: 0;
+}
+.call-text h2 {
+  margin-bottom: 0;
 }
 
 .call-container button {
